fix collapsing menu and small refactoring

--- a/priv/static/css/main.css
+++ b/priv/static/css/main.css
@@ -89,9 +89,12 @@ body {
 
 }
 
-@media (max-width: 990px) {
+@media (max-width: 910px) {
     .navbar-header {
         float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
     }
     .navbar-toggle {
         display: block;
@@ -100,21 +103,29 @@ body {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
+    .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
     .navbar-collapse.collapse {
         display: none!important;
     }
     .navbar-nav {
         float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
+    margin-top: 7.5px;
+  }
+  .navbar-nav>li {
         float: none;
     }
     .navbar-nav>li>a {
         padding-top: 10px;
         padding-bottom: 10px;
     }
+    .collapse.in{
+      display:block !important;
+  }
 }
+
 .board h3 {
 	margin: 60px 0 10px;
 	letter-spacing: -1px;
